# Data

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  CONTRIBUTING.md  Data.cpp  Data.h  Data.lib  Debugto_do.txt  File.cpp  File.h  Folder.cpp  Folder.h  Hash.cpp  README.md  SECURITY.md  SQL.cpp  SQL.h  Show.h  Test.cpp  Test.h  TodoShow.cpp  TodoShow.h  UnitTest.cpp  UnitTest.h  index.css  index.html  main.cpp  premake5.lua
.github/: build.sh  clean.sh  dev.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml
CPP-DATA/: Data.cpp  Data.h  File.cpp  File.h  Folder.cpp  Folder.h  Hash.h  SQLServer.cpp  SQLServer.h  SQLite.cpp  SQLite.h
DATA/: File.h  Folder.h  Settings.h
Data/: Data.h  File.cpp  File.h  Folder.cpp  Folder.h  Hash.cpp  Hash.h  Settings.h
Main/: CMakeLists.txt  Main.cpp  Show.h  ToDoShow.cpp  UnitTest.cpp  UnitTest.h
lib/: DataDebug.lib  DataRelease.lib
